# mahali-dasc

./: .flake8  GlowOptimize.py  README.md  SingleBin.py  pyproject.toml
data/: PKR_DASC_0558_20151007_061913.020.FITS
src/mahali_dasc/: dasc.py  fit.py
