[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[package]
name = "mahali_dasc"
depedencies = ["astropy", "scipy", "numpy", "matplotlib"]
requires-python = ">=3.10"

[tool.black]
line-length = 90

[tool.mypy]
files = ["."]
ignore_missing_imports = true
strict_optional = false
allow_redefinition = true
show_error_context = false
show_column_numbers = true
